# WTI-Crude-Oil-Trading-Bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: init_schema.sql
src/: __init__.py  main.py
src/api/: __init__.py  dashboard.py  deps.py  events.py  execution.py  health.py  market_data.py  risk.py  router.py  signals.py  system.py  websocket.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  audit_logger.py  circuit_breaker.py  data_retention.py  database.py  logging_config.py  rate_limiter.py  redis_client.py  retry.py  secrets.py  security_middleware.py
src/dashboard/: __init__.py  service.py
src/event_bus/: __init__.py  bus.py  events.py
src/events/: __init__.py  calendar.py  engine.py  models.py
src/execution/: __init__.py  engine.py
src/execution/brokers/: __init__.py  base.py  paper.py
src/execution/models/: __init__.py  order.py  position.py
src/market_data/: __init__.py  aggregator.py  anomaly_detector.py  feed_manager.py  heartbeat.py
src/market_data/adapters/: __init__.py  base.py  simulated.py
src/market_data/models/: __init__.py  events.py
src/models/: __init__.py  base.py
src/risk/: __init__.py  manager.py  models.py
src/services/: __init__.py  health_monitor.py
src/strategy/: __init__.py  engine.py
src/strategy/detectors/: __init__.py  breakout.py  correlation.py  fake_spike_filter.py  liquidity_sweep.py
src/strategy/models/: __init__.py  signal.py
src/websocket/: __init__.py  handlers.py  manager.py
tests/: __init__.py  test_health.py
tests/events/: __init__.py  test_event_calendar.py  test_event_models.py
tests/execution/: test_order.py  test_position.py
tests/market_data/: __init__.py  test_aggregator.py  test_events.py  test_feed_manager.py
tests/risk/: __init__.py  test_risk_manager.py
tests/strategy/: __init__.py  test_signal.py  test_sweep_detector.py
